# Neuroproof_minimal

./: CMakeLists.txt  NeuroProof_plan.cpp  NeuroProof_stack.cpp  NeuroProof_stack_learn.cpp  conda_install_cilk.sh  run.sh
Algorithms/: CMakeLists.txt  MergePriorityFunction.cpp  MergePriorityFunction.h  RagAlgs.h
Classifier/: CMakeLists.txt  edgeclassifier.h  vigraRFclassifier.cpp  vigraRFclassifier.h
DataStructures/: CMakeLists.txt  NodeType.h  Rag.h  RagEdge.h  Stack.cpp  Stack.h  StackPredict.cpp
FeatureManager/: CMakeLists.txt  FeatureManager.cpp  FeatureManager.h  Features.cpp  Features.h
Utilities/: loading_plan.h  storage_plan.h
Watershed/: vigra_watershed.h
